
v0.2.1:

    * ensure that the thread addinity is set properly on thread startup.

v0.2.0:

    * add SHLock class for shared/exclusive (also known as read/write) locks.

v0.1.4:

    * fix silly typo when loading libc (it's a miracle previous versions
      worked at all!)

v0.1.3:

    * better CPUSet <-> bitmask conversion
    * posix: dynamically calculate size of _cpuset struct.

v0.1.1:

    * support for setting process- and thread-level CPU affinity.

v0.1.0:

    * initial release - you might say *everything* has changed...
